# DAT105

./: .gitignore  README.md
Introduksjon/: Introduksjon.sln
Introduksjon/HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj
Introduksjon/WriteRead/: WriteRead.cpp  WriteRead.vcxproj  WriteRead.vcxproj.filters  stdafx.cpp  stdafx.h  writeread.txt
Lab1/: Lab1.sln
Lab1/OPP1/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
Lab1/Oppgave1/: Oppgave1.cpp  Oppgave1.vcxproj  Oppgave1.vcxproj.filters  stdafx.cpp
Lab1/Oppgave2/: Oppgave2.cpp  Oppgave2.vcxproj  Oppgave2.vcxproj.filters  stdafx.cpp
Lab1/Oppgave3/: Oppgave3.cpp  Oppgave3.vcxproj  Oppgave3.vcxproj.filters  main.cpp
Lab2/Oppgave1/: CMakeLists.txt  Konto.cpp  Konto.h  Spiller.cpp  Spiller.h  Transaksjon.cpp  Transaksjon.h
Lab2/Oppgave4/: .gitignore  main.cpp
Lab2/Oppgave5/: CMakeLists.txt  StackADT.cpp  StackADT.h  StackArray.cpp  StackArray.h  Tull.cpp  Tull.h  main.cpp
Lab4/: CMakeLists.txt  DoubleNode.h  DoublyLinkedList.h  ListADT.h  Node.h  main.cpp
Lab5/: CMakeLists.txt  main.cpp
Lab5/ListSolution/: CMakeLists.txt
Lab5/PiggyBank1/: CMakeLists.txt  main.cpp
Lab5/VectorSolution/: .gitignore  CMakeLists.txt  main.cpp
Lab6/Graph/: .gitignore  (+8 more)
Oblig02/: README.md
Oblig02/Exercise04/: CMakeLists.txt  Graph.h  GraphADT.h  README.md  main.cpp
QtLab01/: Exercise01.pro  gameengine.cpp  gameengine.h  gamegui.cpp  gamegui.h  igameengine.h  main.cpp
QtLab02/: QtLab02.pro  hangmanlogic.cpp  hangmanlogic.h  hangmanwidget.cpp  hangmanwidget.h  ihangmanlogic.h  main.cpp  mainwindow.cpp  mainwindow.h
(+42 files in other folders)
